fix(JobCard): fix company logo stretched on IE11

--- a/react/JobCard/JobCard.less
+++ b/react/JobCard/JobCard.less
@@ -192,6 +192,7 @@
   margin: 0 auto;
   display: flex;
   align-self: flex-start;
+  flex-shrink: 0; // reset flex-negative to fix overflowed image on IE11
 }
 
 .positionTitle {
